# known-paths

./: README.md
.github/workflows/: ci.yaml
python/: README.md  pyproject.toml
ruby/: README.md  known-paths.gemspec
ruby/lib/: known-paths.rb
ruby/lib/known/: paths.rb
rust/: Cargo.toml  README.md
